# Panelz2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Files/: input.in
Modules/: CMakeLists.txt  panelz2.cxx
src/: CMakeLists.txt
src/Airfoil/: Airfoil.cc  Airfoil.cxx  Airfoil.h  CMakeLists.txt  Freestream.cxx  Freestream.h  Input.cxx  Input.h  VersionInfo.h
src/Geometry/: CMakeLists.txt  Point3D.h  Vector3D.cc  Vector3D.h
src/Input/: CMakeLists.txt  Input.cxx  Input.h  VersionInfo.h
src/LinearAlgebra/: CMakeLists.txt  Matrix.cxx  Matrix.h
src/Solver/: PanelSolver.cxx  PanelSolver.h  SvgPlotter.cxx  SvgPlotter.h
tests/: test_airfoil.cpp  test_matrix.cpp  test_panel_solver.cpp  test_vector3d.cpp
